Chore: update localization.

--- a/brd-ios/breadwallet/src/Strings/en.lproj/Localizable.strings
+++ b/brd-ios/breadwallet/src/Strings/en.lproj/Localizable.strings
@@ -1568,7 +1568,7 @@
 "RateAppPrompt.Title.Android" = "Rate RockWallet";
 
 /* Address copied message. */
-"Receive.copied" = "Copied to clipboard.";
+"Receive.copied" = "Copied to clipboard";
 
 /* Share via email button label */
 "Receive.emailButton" = "Email";
