--- a/brd-ios/breadwallet/src/Strings/en.lproj/Localizable.strings
+++ b/brd-ios/breadwallet/src/Strings/en.lproj/Localizable.strings
@@ -78,7 +78,7 @@
 /* $10000 per BTC */
 "Account.exchangeRate" = "%1$@ per %2$@";
 
-/* Get full access for the Rockwallet wallet label on profile screen */
+/* Get full access for the Rockwallet label on profile screen */
 "Account.FullAccess" = "Get full access to your RockWallet!";
 
 /* ID Verification title on account screen */
@@ -200,7 +200,7 @@
 "AccountDelete.DeleteWhatMean" = "What does this mean?";
 
 /* Delete account explanation part one */
-"AccountDelete.ExplanationOne" = "-You will no longer be able to use your email to sign in into Rockwallet Wallet";
+"AccountDelete.ExplanationOne" = "-You will no longer be able to use your email to sign in into Rockwallet";
 
 /* Delete account explanation part three */
 "AccountDelete.ExplanationThree" = "-Your private keys are still yours, keep your security phrase in a safe place in case you need to restore your wallet.";
@@ -1168,7 +1168,7 @@
 "Import.leftCaption" = "Wallet to be imported";
 
 /* Import wallet intro screen message */
-"Import.message" = "Importing a wallet transfers all the money from your other wallet into your Rockwallet wallet using a single transaction.";
+"Import.message" = "Importing a wallet transfers all the money from your other wallet into your Rockwallet using a single transaction.";
 
 /* Enter password alert view title */
 "Import.password" = "This private key is password protected.";
@@ -1177,7 +1177,7 @@
 "Import.passwordPlaceholder" = "password";
 
 /* Caption for graphics */
-"Import.rightCaption" = "Your Rockwallet Wallet";
+"Import.rightCaption" = "Your Rockwallet";
 
 /* Scan Private key button label */
 "Import.scan" = "Scan Private Key";
@@ -1706,7 +1706,7 @@
 "RecoveryKeyFlow.successHeading" = "Congratulations! You completed your recovery phrase setup.";
 
 /* Subtitle for the success page after the recovery key has been set up */
-"RecoveryKeyFlow.successSubheading" = "You're all set to deposit, swap, and buy crypto from your Rockwallet wallet.";
+"RecoveryKeyFlow.successSubheading" = "You're all set to deposit, swap, and buy crypto from your Rockwallet.";
 
 /* Title displayed to the user on the intro screen when unlinking a wallet */
 "RecoveryKeyFlow.unlinkWallet" = "Unlink your wallet from this device.";
@@ -2823,7 +2823,7 @@
 "UpdatePin.TwoAttempts" = "2 more failed attempts.";
 
 /* Update pin popup explanation when pressing "?" button */
-"UpdatePin.UpdatePinPopup" = "The Rockwallet Wallet app requires you to set a PIN to secure your wallet, separate from your device passcode.  \n\nYou will be required to enter the PIN to view your balance or send money, which keeps your wallet private even if you let someone use your phone or if your phone is stolen by someone who knows your device passcode.\n            \nDo not forget your wallet PIN! It can only be reset by using your Recovery Phrase. If you forget your PIN and lose your Recovery Phrase, your wallet will be lost.";
+"UpdatePin.UpdatePinPopup" = "The Rockwallet app requires you to set a PIN to secure your wallet, separate from your device passcode.  \n\nYou will be required to enter the PIN to view your balance or send money, which keeps your wallet private even if you let someone use your phone or if your phone is stolen by someone who knows your device passcode.\n            \nDo not forget your wallet PIN! It can only be reset by using your Recovery Phrase. If you forget your PIN and lose your Recovery Phrase, your wallet will be lost.";
 
 /* Update PIN title */
 "UpdatePin.updateTitle" = "Update PIN";
@@ -3041,7 +3041,7 @@
 "WipeWallet.instruction" = "Please enter your recovery phrase to wipe this wallet from your device.";
 
 /* Instructions for unlinking the wallet */
-"WipeWallet.startMessage" = "Starting or recovering another wallet allows you to access and manage a different Rockwallet wallet on this device.";
+"WipeWallet.startMessage" = "Starting or recovering another wallet allows you to access and manage a different Rockwallet on this device.";
 
 /* Start wipe wallet view warning */
 "WipeWallet.startWarning" = "Your current wallet will be removed from this device. If you wish to restore it in the future, you will need to enter your Recovery Phrase.";
