--- a/brd-ios/breadwallet/src/Strings/it.lproj/Localizable.strings
+++ b/brd-ios/breadwallet/src/Strings/it.lproj/Localizable.strings
@@ -77,7 +77,7 @@
 "Alert.ethBalance" = "Insufficient Ethereum Balance";
 
 /* Keystore error */
-"Alert.keystore.generic.android" = "C’è un problema con il KeyStore del tuo sistema operativo Android, per favore, contatta support@breadwallet.com";
+"Alert.keystore.generic.android" = "C’è un problema con il KeyStore del tuo sistema operativo Android, per favore, contatta hello@rockwallet.com";
 
 /* KeyStore error, keys are invalidated */
 "Alert.keystore.invalidated.android" = "I tuoi dati criptati di Rockwallet sono stati recentemente  invalidati  perché la schermata di blocco del tuo Android era disabilitata.";
