--- a/brd-ios/breadwallet/src/Strings/da.lproj/Localizable.strings
+++ b/brd-ios/breadwallet/src/Strings/da.lproj/Localizable.strings
@@ -77,7 +77,7 @@
 "Alert.ethBalance" = "Insufficient Ethereum Balance";
 
 /* Keystore error */
-"Alert.keystore.generic.android" = "Der er et problem med din Android OS keystore, kontakt venligst support@rockwallet.com";
+"Alert.keystore.generic.android" = "Der er et problem med din Android OS keystore, kontakt venligst hello@rockwallet.com";
 
 /* KeyStore error, keys are invalidated */
 "Alert.keystore.invalidated.android" = "Dine Rockwallet-krypterede data blev for nyligt ugyldiggjort, eftersom din Android skærmlås blev deaktiveret.";
