fix: enter phrase screen.

--- a/brd-ios/breadwallet/src/Strings/da.lproj/Localizable.strings
+++ b/brd-ios/breadwallet/src/Strings/da.lproj/Localizable.strings
@@ -972,7 +972,7 @@
 
 "Prompts.RateApp.enjoyingBrd" = "Nyder BRD?";
 
-"Prompts.RateApp.enjoyingRockwallet" = "Nyder Rockwallet?";
+"Prompts.RateApp.enjoyingFabriik" = "Nyder Fabriik?";
 
 "Prompts.RateApp.enjoyingRockwallet" = "Nyder Rockwallet?";
 
